--- a/index.html
+++ b/index.html
@@ -63,11 +63,325 @@
 
                 <!-- stories -->
                 <div class="stories">
-                    <div class="stories_avatar"></div>
-                    <div class="stories_text"></div>
+                    <div class="stories_avatar">
+                        <img src="./img/resim.jpg" alt="">
+                        <span>ismayil</span>
+
+                    </div>
+                    <div class="stories_avatar">
+                        <img src="./img/resim.jpg" alt="">
+                        <span>ismayil</span>
+                    </div>
+                    <div class="stories_avatar">
+                        <img src="./img/resim.jpg" alt="">
+                        <span>ismayil</span>
+                    </div>
+                    <div class="stories_avatar">
+                        <img src="./img/resim.jpg" alt="">
+                        <span>ismayil</span>
+                    </div>
+
+                    <div class="stories_avatar">
+                        <img src="./img/resim.jpg" alt="">
+                        <span>ismayil</span>
+                    </div>
+                    <div class="stories_avatar">
+                        <img src="./img/resim.jpg" alt="">
+                        <span>ismayil</span>
+                    </div>
+                    <div class="stories_avatar">
+                        <img src="./img/resim.jpg" alt="">
+                        <span>ismayil</span>
+                    </div>
+
                 </div>
                 <!-- stories end -->
 
+                <!-- card start -->
+                <div class="card">
+                    <div class="card_header">
+                        <div class="card_avatar">
+                            <img src="./img/title.jpg" alt="">
+                        </div>
+                        <div class="card_title">
+                            <a href="#">sahanefilmler</a>
+                        </div>
+                        <div class="card_dot">
+                            <a href="#"><i class="fas fa-ellipsis-h"></i></a>
+                        </div>
+                    </div>
+                    <div class="line">
+                    </div>
+
+                    <div class="card_image">
+                        <img src="./img/post_image.jpg" alt="">
+                    </div>
+                    <div class="card_buttons">
+                        <div class="buttons">
+                            <li><a href="#"><i class="fas fa-heart"></i></a></li>
+                            <li><a href="#"><i class="fas fa-comment"></i></a></li>
+                            <li><a href="#"><i class="fas fa-paper-plane"></i></a></li>
+                        </div>
+
+                        <div class="save">
+                            <a href="#"><i class="fas fa-bookmark"></i></a>
+                        </div>
+                    </div>
+                    <div class="card_other">
+                        <a href="#">1.692 beğenme</a>
+                        <span><a href="#">sahanefilmler</a> aman aman</span>
+                        <span class="comment"> <a href="#">11 yorumun tümünü gör</a></span>
+                        <span class="date">8 saat önce</span>
+                    </div>
+
+                    <div class="do_comment">
+                        <a href="#" class="smile"><i class="fas fa-smile"></i></a>
+                        <input type="text" class="input" placeholder="Yorum ekle...">
+                        <a href="#" class="share">Paylaş</a>
+                    </div>
+
+                </div>
+                <!-- card end -->
+
+
+
+
+                <!-- card start -->
+                <div class="card">
+                    <div class="card_header">
+                        <div class="card_avatar">
+                            <img src="./img/title.jpg" alt="">
+                        </div>
+                        <div class="card_title">
+                            <a href="#">sahanefilmler</a>
+                        </div>
+                        <div class="card_dot">
+                            <a href="#"><i class="fas fa-ellipsis-h"></i></a>
+                        </div>
+                    </div>
+                    <div class="line">
+                    </div>
+
+                    <div class="card_image">
+                        <img src="./img/post_image.jpg" alt="">
+                    </div>
+                    <div class="card_buttons">
+                        <div class="buttons">
+                            <li><a href="#"><i class="fas fa-heart"></i></a></li>
+                            <li><a href="#"><i class="fas fa-comment"></i></a></li>
+                            <li><a href="#"><i class="fas fa-paper-plane"></i></a></li>
+                        </div>
+
+                        <div class="save">
+                            <a href="#"><i class="fas fa-bookmark"></i></a>
+                        </div>
+                    </div>
+                    <div class="card_other">
+                        <a href="#">1.692 beğenme</a>
+                        <span><a href="#">sahanefilmler</a> aman aman</span>
+                        <span class="comment"> <a href="#">11 yorumun tümünü gör</a></span>
+                        <span class="date">8 saat önce</span>
+                    </div>
+
+                    <div class="do_comment">
+                        <a href="#" class="smile"><i class="fas fa-smile"></i></a>
+                        <input type="text" class="input" placeholder="Yorum ekle...">
+                        <a href="#" class="share">Paylaş</a>
+                    </div>
+
+                </div>
+                <!-- card end -->
+
+                <!-- card start -->
+                <div class="card">
+                    <div class="card_header">
+                        <div class="card_avatar">
+                            <img src="./img/title.jpg" alt="">
+                        </div>
+                        <div class="card_title">
+                            <a href="#">sahanefilmler</a>
+                        </div>
+                        <div class="card_dot">
+                            <a href="#"><i class="fas fa-ellipsis-h"></i></a>
+                        </div>
+                    </div>
+                    <div class="line">
+                    </div>
+
+                    <div class="card_image">
+                        <img src="./img/post_image.jpg" alt="">
+                    </div>
+                    <div class="card_buttons">
+                        <div class="buttons">
+                            <li><a href="#"><i class="fas fa-heart"></i></a></li>
+                            <li><a href="#"><i class="fas fa-comment"></i></a></li>
+                            <li><a href="#"><i class="fas fa-paper-plane"></i></a></li>
+                        </div>
+
+                        <div class="save">
+                            <a href="#"><i class="fas fa-bookmark"></i></a>
+                        </div>
+                    </div>
+                    <div class="card_other">
+                        <a href="#">1.692 beğenme</a>
+                        <span><a href="#">sahanefilmler</a> aman aman</span>
+                        <span class="comment"> <a href="#">11 yorumun tümünü gör</a></span>
+                        <span class="date">8 saat önce</span>
+                    </div>
+
+                    <div class="do_comment">
+                        <a href="#" class="smile"><i class="fas fa-smile"></i></a>
+                        <input type="text" class="input" placeholder="Yorum ekle...">
+                        <a href="#" class="share">Paylaş</a>
+                    </div>
+
+                </div>
+                <!-- card end -->
+
+
+
+                <!-- card start -->
+                <div class="card">
+                    <div class="card_header">
+                        <div class="card_avatar">
+                            <img src="./img/title.jpg" alt="">
+                        </div>
+                        <div class="card_title">
+                            <a href="#">sahanefilmler</a>
+                        </div>
+                        <div class="card_dot">
+                            <a href="#"><i class="fas fa-ellipsis-h"></i></a>
+                        </div>
+                    </div>
+                    <div class="line">
+                    </div>
+
+                    <div class="card_image">
+                        <img src="./img/post_image.jpg" alt="">
+                    </div>
+                    <div class="card_buttons">
+                        <div class="buttons">
+                            <li><a href="#"><i class="fas fa-heart"></i></a></li>
+                            <li><a href="#"><i class="fas fa-comment"></i></a></li>
+                            <li><a href="#"><i class="fas fa-paper-plane"></i></a></li>
+                        </div>
+
+                        <div class="save">
+                            <a href="#"><i class="fas fa-bookmark"></i></a>
+                        </div>
+                    </div>
+                    <div class="card_other">
+                        <a href="#">1.692 beğenme</a>
+                        <span><a href="#">sahanefilmler</a> aman aman</span>
+                        <span class="comment"> <a href="#">11 yorumun tümünü gör</a></span>
+                        <span class="date">8 saat önce</span>
+                    </div>
+
+                    <div class="do_comment">
+                        <a href="#" class="smile"><i class="fas fa-smile"></i></a>
+                        <input type="text" class="input" placeholder="Yorum ekle...">
+                        <a href="#" class="share">Paylaş</a>
+                    </div>
+
+                </div>
+                <!-- card end -->
+
+
+
+
+                <!-- card start -->
+                <div class="card">
+                    <div class="card_header">
+                        <div class="card_avatar">
+                            <img src="./img/title.jpg" alt="">
+                        </div>
+                        <div class="card_title">
+                            <a href="#">sahanefilmler</a>
+                        </div>
+                        <div class="card_dot">
+                            <a href="#"><i class="fas fa-ellipsis-h"></i></a>
+                        </div>
+                    </div>
+                    <div class="line">
+                    </div>
+
+                    <div class="card_image">
+                        <img src="./img/post_image.jpg" alt="">
+                    </div>
+                    <div class="card_buttons">
+                        <div class="buttons">
+                            <li><a href="#"><i class="fas fa-heart"></i></a></li>
+                            <li><a href="#"><i class="fas fa-comment"></i></a></li>
+                            <li><a href="#"><i class="fas fa-paper-plane"></i></a></li>
+                        </div>
+
+                        <div class="save">
+                            <a href="#"><i class="fas fa-bookmark"></i></a>
+                        </div>
+                    </div>
+                    <div class="card_other">
+                        <a href="#">1.692 beğenme</a>
+                        <span><a href="#">sahanefilmler</a> aman aman</span>
+                        <span class="comment"> <a href="#">11 yorumun tümünü gör</a></span>
+                        <span class="date">8 saat önce</span>
+                    </div>
+
+                    <div class="do_comment">
+                        <a href="#" class="smile"><i class="fas fa-smile"></i></a>
+                        <input type="text" class="input" placeholder="Yorum ekle...">
+                        <a href="#" class="share">Paylaş</a>
+                    </div>
+
+                </div>
+                <!-- card end -->
+
+
+
+                <!-- card start -->
+                <div class="card">
+                    <div class="card_header">
+                        <div class="card_avatar">
+                            <img src="./img/title.jpg" alt="">
+                        </div>
+                        <div class="card_title">
+                            <a href="#">sahanefilmler</a>
+                        </div>
+                        <div class="card_dot">
+                            <a href="#"><i class="fas fa-ellipsis-h"></i></a>
+                        </div>
+                    </div>
+                    <div class="line">
+                    </div>
+
+                    <div class="card_image">
+                        <img src="./img/post_image.jpg" alt="">
+                    </div>
+                    <div class="card_buttons">
+                        <div class="buttons">
+                            <li><a href="#"><i class="fas fa-heart"></i></a></li>
+                            <li><a href="#"><i class="fas fa-comment"></i></a></li>
+                            <li><a href="#"><i class="fas fa-paper-plane"></i></a></li>
+                        </div>
+
+                        <div class="save">
+                            <a href="#"><i class="fas fa-bookmark"></i></a>
+                        </div>
+                    </div>
+                    <div class="card_other">
+                        <a href="#">1.692 beğenme</a>
+                        <span><a href="#">sahanefilmler</a> aman aman</span>
+                        <span class="comment"> <a href="#">11 yorumun tümünü gör</a></span>
+                        <span class="date">8 saat önce</span>
+                    </div>
+
+                    <div class="do_comment">
+                        <a href="#" class="smile"><i class="fas fa-smile"></i></a>
+                        <input type="text" class="input" placeholder="Yorum ekle...">
+                        <a href="#" class="share">Paylaş</a>
+                    </div>
+
+                </div>
+                <!-- card end -->
 
             </div>
             <!-- content_cardBody end -->
