--- a/index.html
+++ b/index.html
@@ -110,8 +110,7 @@
                             <a href="#"><i class="fas fa-ellipsis-h"></i></a>
                         </div>
                     </div>
-                    <div class="line">
-                    </div>
+                    <hr class="hr">
 
                     <div class="card_image">
                         <img src="./img/post_image.jpg" alt="">
@@ -159,8 +158,7 @@
                             <a href="#"><i class="fas fa-ellipsis-h"></i></a>
                         </div>
                     </div>
-                    <div class="line">
-                    </div>
+                    <hr class="hr">
 
                     <div class="card_image">
                         <img src="./img/post_image.jpg" alt="">
@@ -205,105 +203,9 @@
                             <a href="#"><i class="fas fa-ellipsis-h"></i></a>
                         </div>
                     </div>
-                    <div class="line">
-                    </div>
-
-                    <div class="card_image">
-                        <img src="./img/post_image.jpg" alt="">
-                    </div>
-                    <div class="card_buttons">
-                        <div class="buttons">
-                            <li><a href="#"><i class="fas fa-heart"></i></a></li>
-                            <li><a href="#"><i class="fas fa-comment"></i></a></li>
-                            <li><a href="#"><i class="fas fa-paper-plane"></i></a></li>
-                        </div>
-
-                        <div class="save">
-                            <a href="#"><i class="fas fa-bookmark"></i></a>
-                        </div>
-                    </div>
-                    <div class="card_other">
-                        <a href="#">1.692 beğenme</a>
-                        <span><a href="#">sahanefilmler</a> aman aman</span>
-                        <span class="comment"> <a href="#">11 yorumun tümünü gör</a></span>
-                        <span class="date">8 saat önce</span>
-                    </div>
-
-                    <div class="do_comment">
-                        <a href="#" class="smile"><i class="fas fa-smile"></i></a>
-                        <input type="text" class="input" placeholder="Yorum ekle...">
-                        <a href="#" class="share">Paylaş</a>
-                    </div>
-
-                </div>
-                <!-- card end -->
-
-
-
-                <!-- card start -->
-                <div class="card">
-                    <div class="card_header">
-                        <div class="card_avatar">
-                            <img src="./img/title.jpg" alt="">
-                        </div>
-                        <div class="card_title">
-                            <a href="#">sahanefilmler</a>
-                        </div>
-                        <div class="card_dot">
-                            <a href="#"><i class="fas fa-ellipsis-h"></i></a>
-                        </div>
-                    </div>
-                    <div class="line">
-                    </div>
-
-                    <div class="card_image">
-                        <img src="./img/post_image.jpg" alt="">
-                    </div>
-                    <div class="card_buttons">
-                        <div class="buttons">
-                            <li><a href="#"><i class="fas fa-heart"></i></a></li>
-                            <li><a href="#"><i class="fas fa-comment"></i></a></li>
-                            <li><a href="#"><i class="fas fa-paper-plane"></i></a></li>
-                        </div>
-
-                        <div class="save">
-                            <a href="#"><i class="fas fa-bookmark"></i></a>
-                        </div>
-                    </div>
-                    <div class="card_other">
-                        <a href="#">1.692 beğenme</a>
-                        <span><a href="#">sahanefilmler</a> aman aman</span>
-                        <span class="comment"> <a href="#">11 yorumun tümünü gör</a></span>
-                        <span class="date">8 saat önce</span>
-                    </div>
-
-                    <div class="do_comment">
-                        <a href="#" class="smile"><i class="fas fa-smile"></i></a>
-                        <input type="text" class="input" placeholder="Yorum ekle...">
-                        <a href="#" class="share">Paylaş</a>
-                    </div>
-
-                </div>
-                <!-- card end -->
-
-
-
-
-                <!-- card start -->
-                <div class="card">
-                    <div class="card_header">
-                        <div class="card_avatar">
-                            <img src="./img/title.jpg" alt="">
-                        </div>
-                        <div class="card_title">
-                            <a href="#">sahanefilmler</a>
-                        </div>
-                        <div class="card_dot">
-                            <a href="#"><i class="fas fa-ellipsis-h"></i></a>
-                        </div>
-                    </div>
-                    <div class="line">
-                    </div>
+                    <hr class="hr">
+                    <!-- <div class="line">
+                    </div> -->
 
                     <div class="card_image">
                         <img src="./img/post_image.jpg" alt="">
@@ -350,8 +252,102 @@
                             <a href="#"><i class="fas fa-ellipsis-h"></i></a>
                         </div>
                     </div>
-                    <div class="line">
+                    <hr class="hr">
+
+                    <div class="card_image">
+                        <img src="./img/post_image.jpg" alt="">
                     </div>
+                    <div class="card_buttons">
+                        <div class="buttons">
+                            <li><a href="#"><i class="fas fa-heart"></i></a></li>
+                            <li><a href="#"><i class="fas fa-comment"></i></a></li>
+                            <li><a href="#"><i class="fas fa-paper-plane"></i></a></li>
+                        </div>
+
+                        <div class="save">
+                            <a href="#"><i class="fas fa-bookmark"></i></a>
+                        </div>
+                    </div>
+                    <div class="card_other">
+                        <a href="#">1.692 beğenme</a>
+                        <span><a href="#">sahanefilmler</a> aman aman</span>
+                        <span class="comment"> <a href="#">11 yorumun tümünü gör</a></span>
+                        <span class="date">8 saat önce</span>
+                    </div>
+
+                    <div class="do_comment">
+                        <a href="#" class="smile"><i class="fas fa-smile"></i></a>
+                        <input type="text" class="input" placeholder="Yorum ekle...">
+                        <a href="#" class="share">Paylaş</a>
+                    </div>
+
+                </div>
+                <!-- card end -->
+
+
+
+
+                <!-- card start -->
+                <div class="card">
+                    <div class="card_header">
+                        <div class="card_avatar">
+                            <img src="./img/title.jpg" alt="">
+                        </div>
+                        <div class="card_title">
+                            <a href="#">sahanefilmler</a>
+                        </div>
+                        <div class="card_dot">
+                            <a href="#"><i class="fas fa-ellipsis-h"></i></a>
+                        </div>
+                    </div>
+                    <hr class="hr">
+
+                    <div class="card_image">
+                        <img src="./img/post_image.jpg" alt="">
+                    </div>
+                    <div class="card_buttons">
+                        <div class="buttons">
+                            <li><a href="#"><i class="fas fa-heart"></i></a></li>
+                            <li><a href="#"><i class="fas fa-comment"></i></a></li>
+                            <li><a href="#"><i class="fas fa-paper-plane"></i></a></li>
+                        </div>
+
+                        <div class="save">
+                            <a href="#"><i class="fas fa-bookmark"></i></a>
+                        </div>
+                    </div>
+                    <div class="card_other">
+                        <a href="#">1.692 beğenme</a>
+                        <span><a href="#">sahanefilmler</a> aman aman</span>
+                        <span class="comment"> <a href="#">11 yorumun tümünü gör</a></span>
+                        <span class="date">8 saat önce</span>
+                    </div>
+
+                    <div class="do_comment">
+                        <a href="#" class="smile"><i class="fas fa-smile"></i></a>
+                        <input type="text" class="input" placeholder="Yorum ekle...">
+                        <a href="#" class="share">Paylaş</a>
+                    </div>
+
+                </div>
+                <!-- card end -->
+
+
+
+                <!-- card start -->
+                <div class="card">
+                    <div class="card_header">
+                        <div class="card_avatar">
+                            <img src="./img/title.jpg" alt="">
+                        </div>
+                        <div class="card_title">
+                            <a href="#">sahanefilmler</a>
+                        </div>
+                        <div class="card_dot">
+                            <a href="#"><i class="fas fa-ellipsis-h"></i></a>
+                        </div>
+                    </div>
+                    <hr class="hr">
 
                     <div class="card_image">
                         <img src="./img/post_image.jpg" alt="">
@@ -388,6 +384,112 @@
 
             <!-- content profile_right start -->
             <div class="content_profile">
+
+                <div class="profile_header">
+                    <div class="avatar">
+                        <img src="/img/resim.jpg" alt="">
+                    </div>
+                    <div class="username">
+                        <a href="#">ismail123</a>
+                        <span>İsmail</span>
+                    </div>
+                    <div class="switch_btn">
+                        <a href="#">Geçiş Yap</a>
+                    </div>
+                </div>
+                <div class="profile_other">
+                    <div class="commit">
+                        <p>Senin İçin Öneriler</p>
+                        <a href="#">Tümünü Gör</a>
+                    </div>
+                    <div class="profile_card">
+                        <div class="avatar">
+                            <img src="./img/title.jpg" alt="">
+                        </div>
+                        <div class="user">
+                            <a href="#">sahanefilmler</a>
+                            <span>Instagram'da Yeni</span>
+                        </div>
+                        <div class="follow_btn">
+                            <a href="#">Takip Et</a>
+                        </div>
+                    </div>
+                    <div class="profile_card">
+                        <div class="avatar">
+                            <img src="./img/title.jpg" alt="">
+                        </div>
+                        <div class="user">
+                            <a href="#">sahanefilmler</a>
+                            <span>Instagram'da Yeni</span>
+                        </div>
+                        <div class="follow_btn">
+                            <a href="#">Takip Et</a>
+                        </div>
+                    </div>
+                    <div class="profile_card">
+                        <div class="avatar">
+                            <img src="./img/title.jpg" alt="">
+                        </div>
+                        <div class="user">
+                            <a href="#">sahanefilmler</a>
+                            <span>Instagram'da Yeni</span>
+                        </div>
+                        <div class="follow_btn">
+                            <a href="#">Takip Et</a>
+                        </div>
+                    </div>
+                    <div class="profile_card">
+                        <div class="avatar">
+                            <img src="./img/title.jpg" alt="">
+                        </div>
+                        <div class="user">
+                            <a href="#">sahanefilmler</a>
+                            <span>Instagram'da Yeni</span>
+                        </div>
+                        <div class="follow_btn">
+                            <a href="#">Takip Et</a>
+                        </div>
+                    </div>
+                    <div class="profile_card">
+                        <div class="avatar">
+                            <img src="./img/title.jpg" alt="">
+                        </div>
+                        <div class="user">
+                            <a href="#">sahanefilmler</a>
+                            <span>Instagram'da Yeni</span>
+                        </div>
+                        <div class="follow_btn">
+                            <a href="#">Takip Et</a>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="copyright">
+
+                    <li><a href="#">Hakkında</a></li>
+                    <span>.</span>
+                    <li><a href="#">Yardım</a></li>
+                    <span>.</span>
+                    <li><a href="#">Basın</a></li>
+                    <span>.</span>
+                    <li><a href="#">API</a></li>
+                    <span>.</span>
+                    <li><a href="#">İş Fırsatları</a></li>
+                    <span>.</span>
+                    <li><a href="#">Gizlilik</a></li>
+                    <span>.</span>
+                    <li><a href="#">Koşullar</a></li>
+                    <span>.</span>
+                    <li><a href="#">Konumlar</a></li>
+                    <span>.</span>
+                    <li><a href="#">Başlıca Hesaplar</a></li>
+                    <span>.</span>
+                    <li><a href="#">Konu Etiketleri</a></li>
+                    <span>.</span>
+                    <li><a href="#">Dil</a></li>
+                </div>
+
 
             </div>
             <!-- content profile_right end -->
