--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
                     <div class="do_comment">
                         <a href="#" class="smile"><i class="fas fa-smile"></i></a>
-                        <input type="text" class="input" placeholder="Yorum ekle...">
+                        <input type="text" class="input" id="comment_input" placeholder="Yorum ekle...">
                         <a href="#" class="share">Paylaş</a>
                     </div>
 
@@ -505,7 +505,7 @@
     <!-- container end -->
 
 
-    <script src="app.js"></script>
+    <script src="./js/app.js"></script>
 </body>
 
 </html>
