--- a/profile.html
+++ b/profile.html
@@ -94,8 +94,49 @@
 
 
         <!-- content side start -->
-        <div class="content"></div>
+        <div class="content">
+            <!-- header start -->
+            <div class="header">
+                <div class="search">
+                    <i class="fas fa-search sr"></i>
+                    <input type="text" placeholder="Search">
+                    <i class="fas fa-microphone mic"></i>
+                </div>
+                <div class="header_menu">
+                    <li class="create">
+                        <i class="fas fa-plus"></i>
+                        <a href="#">Create New Post</a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="far fa-envelope"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="far fa-heart"></i>
+                        </a>
+                    </li>
+                    <li class="sort_profile">
+                        <img src="./img/resim.jpg" alt="">
 
+                        <i class="fas fa-sort-down"></i>
+
+                    </li>
+                </div>
+
+
+
+            </div>
+            <!-- header end -->
+            <div class="main"> </div>
+
+
+
+
+
+
+        </div>
 
         <!-- content side end -->
 
