--- a/profile.html
+++ b/profile.html
@@ -129,8 +129,25 @@
 
             </div>
             <!-- header end -->
-            <div class="main"> </div>
 
+            <!-- main start -->
+            <div class="main">
+
+                <div id="main">
+
+                </div>
+
+                <div class="main_profile">
+
+                </div>
+
+
+
+
+
+
+            </div>
+            <!-- main end -->
 
 
 
