--- a/profile.html
+++ b/profile.html
@@ -134,7 +134,14 @@
             <div class="main">
 
                 <div id="main">
-                    asdasdasasdasd
+                    <div class="main_box1">
+                        <div class="box_title">
+                            <h1>Featured Stories</h1>
+                        </div>
+                        <div class="boxs">
+
+                        </div>
+                    </div>
                 </div>
 
                 <div class="main_profile">
