--- a/profile.html
+++ b/profile.html
@@ -136,10 +136,29 @@
                 <div id="main">
                     <div class="main_box1">
                         <div class="box_title">
-                            <h1>Featured Stories</h1>
+                            <h2>Featured Stories</h2>
+                            <span>Populer Stories</span>
                         </div>
                         <div class="boxs">
-
+                            <img src="./img/1.jpg" alt="">
+                            <img src="./img/2.jpg" alt="">
+                            <img src="./img/3.jpg" alt="">
+                            <img src="./img/4.jpg" alt="">
+                            <img src="./img/5.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="main_box1">
+                        <div class="box_title">
+                            <h2>Latest Feed</h2>
+                            <i class="fas fa-align-justify left"></i>
+                            <i class="fas fa-list right"></i>
+                        </div>
+                        <div class="boxs">
+                            <img src="./img/1.jpg" alt="">
+                            <img src="./img/2.jpg" alt="">
+                            <img src="./img/3.jpg" alt="">
+                            <img src="./img/4.jpg" alt="">
+                            <img src="./img/5.jpg" alt="">
                         </div>
                     </div>
                 </div>
