Profile Instagram Clone

--- a/profile.html
+++ b/profile.html
@@ -160,15 +160,47 @@
                             <img src="./img/4.jpg" alt="">
                             <img src="./img/5.jpg" alt="">
                         </div>
+                        <div class="boxs lastBox">
+                            <img src="./img/1.jpg" alt="">
+                            <img src="./img/2.jpg" alt="">
+                            <img src="./img/3.jpg" alt="">
+                            <img src="./img/4.jpg" alt="">
+                            <img src="./img/5.jpg" alt="">
+                        </div>
                     </div>
                 </div>
 
                 <div class="main_profile">
+                    <div class="main_profile_img">
+                        <img src="./img/resim.jpg" alt="">
+                    </div>
+                    <div class="main_profile_title">
+                        <h2>İsmail Gök</h2>
+                        <div class="main_social">
+                            <p><span>882</span> Photos</p>
+                            <p><span>527k</span> Followers</p>
+                        </div>
+                    </div>
+                    <div class="main_profile_content">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore voluptatibus enim perspiciatis cum quos explicabo laboriosam saepe quisquam reiciendis rem fugiat dolor, ullam ad tenetur minus. Eaque odio enim harum consequuntur
+                            expedita quis rerum doloremque dolorum, at quam maiores illo sequi voluptates. Natus placeat adipisci non repellat error, a consectetur!</p>
+                    </div>
 
+                    <div class="location_box">
+                        <span>Locations</span>
+                        <p>Based 'n Iceland.</p>
+                    </div>
+
+                    <div class="location_box">
+                        <span>Profession</span>
+                        <p>Photographer</p>
+                    </div>
+
+                    <div class="location_box">
+                        <span>Profession</span>
+                        <p>Based 'n Iceland.</p>
+                    </div>
                 </div>
-
-
-
 
 
 
